ports and adpters for blog service